src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>npo02__OppAmountThisYearHH__c</fullName>
        <description>Formula:  Total Gifts This Year on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__OppAmountThisYear__c,
npo02__Household__r.npo02__OppAmountThisYear__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula:  Total Gifts This Year on related Household.</inlineHelpText>
        <label>Total Household Gifts This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Opportunities related to this Contact by primary Opportunity Contact Role, closed this year.</inlineHelpText>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role, closed two years ago.</inlineHelpText>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role, closed in the last number of days defined in Household Settings.</inlineHelpText>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role, closed last year.</inlineHelpText>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types and FY/CY. Do not update, updated by automatic process.</description>
        <inlineHelpText>The total number of won Opportunities with amount greater than zero related to this Contact by primary Opportunity Contact Role, closed this year.</inlineHelpText>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The smallest amount of a won Opportunity related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Last_Year__c</fullName>
        <inlineHelpText>The sum of soft credit Opportunity amounts last year determined by Opportunity Contact Role and filtered by Roles in Household Settings.</inlineHelpText>
        <label>Soft Credit Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_This_Year__c</fullName>
        <inlineHelpText>Total soft credit amount this year</inlineHelpText>
        <label>Soft Credit This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Total__c</fullName>
        <inlineHelpText>Total amount in soft credits for this Contact&apos;s lifetime. Defined in the Household Settings tab.</inlineHelpText>
        <label>Soft Credit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Two_Years_Ago__c</fullName>
        <inlineHelpText>The sum of soft credit Opportunity amounts two years ago determined by Opportunity Contact Role and filtered by Roles in Household Settings.</inlineHelpText>
        <label>Soft Credit Two Years Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__SystemHouseholdProcessor__c</fullName>
        <description>Used to set if Households should get created for all Contacts, or just those which are connected to an individual account.  Deprecated; replaced by HouseholdsSettings npo02__Household_Rules__c</description>
        <label>_SYSTEM: HOUSEHOLD PROCESSOR-DEPRECATED</label>
        <picklist>
            <picklistValues>
                <fullName>All Individual Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All New or Edited Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contacts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The total amount of won Membership Opportunities (Record Type) related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>See Household Settings for excluded Record Types.  Do not update, updated by automatic process.</description>
        <inlineHelpText>The sum of won Opportunity Amounts related to this Contact by primary Opportunity Contact Role.</inlineHelpText>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Total_Household_Gifts__c</fullName>
        <description>Formula:  Total Gifts on related Household.</description>
        <formula>IF(npe01__Organization_Type__c == &apos;Household Account&apos;, 
Account.npo02__TotalOppAmount__c,
npo02__Household__r.npo02__TotalOppAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula:  Total Gifts on related Household.</inlineHelpText>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>